fix: prevent navbar on mobile to cover the main content

--- a/client/src/styles/status.module.css
+++ b/client/src/styles/status.module.css
@@ -46,6 +46,9 @@
   background: rgba(0, 229, 255, 0.3);
   border-radius: 10px;
 }
+.mockBody {
+  height: calc(100dvh - 10.5rem);
+}
 
 @media (min-width: 800px) {
   .mockBody {
